# ros2-robot

./: README.md
Aubo/: README.md
Aubo/aubo_ros2_gazebo/: CMakeLists.txt  package.xml  xacro.sh
Aubo/aubo_ros2_gazebo/launch/: aubo_simulation.launch.py  aubo_visualization.launch.py
Aubo/aubo_ros2_gazebo/urdf/: aubo_C3.urdf  aubo_C5.urdf  aubo_E10.urdf  aubo_F12B.urdf  aubo_S3.urdf  aubo_S5.urdf  aubo_T12.urdf  aubo_T6.urdf  aubo_i10.urdf  aubo_i12.urdf  aubo_i16.urdf  aubo_i20.urdf  aubo_i3.urdf  aubo_i5.urdf  aubo_i7.urdf  aubo_iS10.urdf  aubo_iS20.urdf  aubo_iS7.urdf
Aubo/aubo_ros2_gazebo/urdf/xacro/: aubo_i5.xacro
Aubo/aubo_ros2_moveit2/: CMakeLists.txt  package.xml
Aubo/aubo_ros2_moveit2/config/: aubo_i5.srdf.xacro
Aubo/aubo_ros2_moveit2/launch/: aubo_i5_moveit.launch.py
Dobot/: README.md
Dobot/cr3_moveit_config/: CMakeLists.txt  package.xml
Dobot/cr3_moveit_config/config/: cr3_robot.urdf  cr3_robot.urdf.xacro
Dobot/cr3_moveit_config/launch/: cr3_moveit.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
Dobot/cr3_moveit_config/rviz/: moveit.rviz
Dobot/cr7_moveit_config/: CMakeLists.txt  package.xml
Dobot/cr7_moveit_config/config/: cr7_robot.urdf  cr7_robot.urdf.xacro
Dobot/cr7_moveit_config/launch/: cr7_interface.launch.py  cr7_moveit.launch.py
Dobot/dobot_ros2_driver/: package.xml  setup.cfg  setup.py
Dobot/dobot_ros2_driver/dobot_ros2_driver/: dobot_api.py  dobot_bringup.py  feedback.py  feedback_backup.py
Dobot/dobot_ros2_driver/launch/: dobot_bringup_ros2.launch.py
Dobot/dobot_ros2_gazebo/: CMakeLists.txt  package.xml
Dobot/dobot_ros2_gazebo/config/: ros2_controllers.yaml
Dobot/dobot_ros2_gazebo/launch/: dobot_simulation.launch.py  dobot_visualization.launch.py
Dobot/dobot_ros2_gazebo/rviz/: view_robot.rviz
Dobot/dobot_ros2_gazebo/urdf/: cr10_robot.xacro  cr12_robot.xacro  cr16_robot.xacro  cr3_robot.xacro  cr5_robot.xacro  cr7_robot.xacro  nova2_robot.xacro  nova5_robot.xacro
Dobot/dobot_ros2_moveit2/: CMakeLists.txt  package.xml
Dobot/dobot_ros2_moveit2/launch/: dobot_moveit.launch.py
Dobot/dobot_ros2_msgs/: CMakeLists.txt  package.xml
HansRobot/: README.md
HansRobot/hans_ros2_gazebo/: CMakeLists.txt  package.xml
HansRobot/hans_ros2_gazebo/launch/: hans_visualization.launch.py
HansRobot/hans_ros2_gazebo/urdf/: elfin10.urdf.xacro  elfin10_l.urdf.xacro  elfin15.urdf.xacro  elfin3.urdf.xacro  elfin5.urdf.xacro  elfin5_l.urdf.xacro
Techman/: README.md
Techman/tm5-900_moveit_config/: CMakeLists.txt  package.xml
Techman/tm5-900_moveit_config/config/: tm5-900.urdf.xacro
Techman/tm5-900_moveit_config/launch/: tm5-900.launch.py  tm5-900_interface.launch.py  tm5-900_moveit.launch.py  tm5-900_run_move_group.launch.py
Techman/tm5-900_ros2_moveit2/: CMakeLists.txt  package.xml
Techman/tm5-900_ros2_moveit2/launch/: tm5-900_moveit.launch.py
Techman/tm_driver/: CMakeLists.txt  package.xml
Techman/tm_msgs/: CMakeLists.txt  package.xml
Techman/tm_ros2_gazebo/: CMakeLists.txt  package.xml
Techman/tm_ros2_gazebo/launch/: tm_simulation.launch.py  tm_visualize.launch.py
Techman/tm_ros2_gazebo/rviz/: view_robot.rviz
Techman/tm_ros2_gazebo/urdf/: tm12-nominal.urdf  tm12x-nominal.urdf  tm14-nominal.urdf  tm14x-nominal.urdf  tm5-700-nominal.urdf  tm5-900-nominal.urdf  tm5-900.urdf  tm5x-700-nominal.urdf  tm5x-900-nominal.urdf
Techman/tm_ros2_gazebo/xacro/: macro.tm12-nominal.urdf.xacro  macro.tm12x-nominal.urdf.xacro  macro.tm14-nominal.urdf.xacro  macro.tm14x-nominal.urdf.xacro  macro.tm5-700-nominal.urdf.xacro  macro.tm5-900-nominal.urdf.xacro  macro.tm5x-700-nominal.urdf.xacro  macro.tm5x-900-nominal.urdf.xacro  tm12.urdf.xacro  tm12x.urdf.xacro  tm14.urdf.xacro  tm14x.urdf.xacro  tm5-700.urdf.xacro  tm5-900.urdf.xacro  tm5x-700.urdf.xacro  tm5x-900.urdf.xacro
Techman/tm_ros2_moveit2/: CMakeLists.txt  package.xml
Techman/tm_ros2_msgs/: CMakeLists.txt  package.xml
UniversalRobots/: README.md
UniversalRobots/UR3E/ur3e_ros2_gazebo/: CMakeLists.txt  package.xml
UniversalRobots/UR3E/ur3e_ros2_gazebo/config/: visual_parameters.yaml
UniversalRobots/UR3E/ur3e_ros2_gazebo/launch/: ur3e_simulation.launch.py  ur3e_visualize.launch.py
UniversalRobots/UR3E/ur3e_ros2_gazebo/urdf/: ur.urdf.xacro  (+1 more)
UniversalRobots/UR3E/ur3e_ros2_moveit2/: CMakeLists.txt  package.xml
UniversalRobots/ur_ros2_driver/: CMakeLists.txt  package.xml
UniversalRobots/ur_ros2_driver/launch/: ur_control.launch.py  ur_driver.launch.py  ur_driver_interface.launch.py
UniversalRobots/ur_ros2_gazebo/: CMakeLists.txt  package.xml
UniversalRobots/ur_ros2_gazebo/launch/: ur_simulation.launch.py
UniversalRobots/ur_ros2_gazebo/urdf/: ur.urdf.xacro  ur_macro.xacro
UniversalRobots/ur_ros2_moveit2/: CMakeLists.txt  package.xml
UniversalRobots/ur_ros2_moveit2/launch/: ur_interface.launch.py  ur_moveit.launch.py
UniversalRobots/ur_ros2_moveit2/srdf/: ur.srdf.xacro
UniversalRobots/ur_ros2_moveit2/ur_ros2_moveit2/: launch_common.py
robot_palletizer/: package.xml  setup.cfg  setup.py
robot_palletizer/robot_palletizer/: dynamic_stack_spawner.py  spawn_pallet.py
robot_palletizer_data/: CMakeLists.txt  package.xml
robot_palletizer_data/srv/: SetStackDimension.srv
ros2_actions/scripts/: moveJ_action.cpp  moveR_action.cpp
ros2_actions_py/: README.md  backup.md  package.xml  setup.cfg  setup.py
ros2_actions_py/ros2_actions_py/: moveJ_action.py
ros2_data/: CMakeLists.txt
ros2_data/action/: Orchestration.action
ros2_execution/: README.md
ros2_execution/scripts/: ros2_execution.py
ros2_execution_py/: package.xml  setup.cfg  setup.py
ros2_execution_py/ros2_execution_py/: moveG_client.py  moveJ_client.py  moveJs_client.py  moveL_client.py  moveROT_client.py  moveRP_client.py  moveR_client.py  moveXYZW_client.py  moveXYZ_client.py  moveYPR_client.py  ros2_execution_file.py  ros2_orchestration_client.py  ros2_orchestration_server.py
ros2_pymoveit2/: CMakeLists.txt  package.xml
ros2_pymoveit2/pymoveit2/: moveit2.py
(+16 files in other folders)
